k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pm-workstation
  labels:
    app: pm-workstation
